[metadata]
name = pegleg
summary = 
description-file = README.md

author = Pegleg team
home-page = http://pegleg.readthedocs.io/en/latest/
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5

[build_sphinx]
source-dir = docs/source
build-dir = docs/build
all_files = 1
warning-is-error = 1

[upload_sphinx]
upload-dir = docs/build/html
